--- a/index_fr.html
+++ b/index_fr.html
@@ -155,7 +155,7 @@
 				</div>
 				<!-- Resource 8: association débouchés durables -->
 				<div class="bubble smaller" id="resource8">
-					<a href="https://debouches-durables.unipoly.ch/">
+					<a href="https://unipoly.ch/debouches-durables/">
 						<img src="logo\débouchés durables.png" alt="association débouchés durables">
 					</a>
 					<div class="text-description">
@@ -349,8 +349,28 @@
 						L'association Amnesty HEL est dédiée à la promotion de la défense des droits de l'homme sur les campus de Lausanne en sensibilisant les étudiants aux questions socio-politiques et environnementales. Ses activités et actions sont organisées en cinq sections : Droits des femmes, Environnement, Actualités politiques internationales, LGBTQ+ et Asile et Migration. Au sein de ces sections, une grande variété d'événements et d'actions ont lieu, notamment des conférences, des projections de films, des ateliers et des initiatives concrètes. Ces actions concrètes comprennent la lutte contre la précarité menstruelle sur le campus, l'organisation de rassemblements pour la durabilité, la création d'un podcast et la réalisation de collectes de déchets. Toutes ces activités sont menées de manière bienveillante et inclusive.
 					</div>
 				</div>
-				<!-- Resource 27: Castor Freegan -->
+				<!-- Resource 27: Apiculture -->
 				<div class="bubble smaller" id="resource27">
+					<a href="https://unipoly.ch/apiculture-english/">
+						<img src="logo\apiculture.png" alt="Apiculture">
+					</a>
+					<div class="text-description">
+						<h3>Apiculture</h3>
+						Le but du projet Apiculture est de sensibiliser les étudiants et le personnel du campus à la problématique du syndrome d’effondrement des colonies d’abeilles et de se familiariser avec l’apiculture. Pour ce faire, le projet possède son propre rucher composé d’environ 5 ruches situé sur le domaine de la ferme de Bassenges depuis début 2017 nous permettant ainsi de s’initier à l’apiculture et de produire du miel lorsque les abeilles l’ont décidé.
+					</div>
+				</div>
+				<!-- Resource 28: Jardins - Campus farmers -->
+				<div class="bubble smaller" id="resource28">
+					<a href="https://unipoly.ch/jardins-campus-farmers/">
+						<img src="logo\jardin_campus_farmers2.png" alt="Jardins - Campus farmers">
+					</a>
+					<div class="text-description">
+						<h3>Jardins - Campus farmers</h3>
+						Ce projet a pour but de permettre aux étudiants de cultiver des légumes sur leur campus de manière biologique. Bien entendu il s’agit d’un terrain d’apprentissage du jardinage, mais c’est aussi un endroit où l’on (re)découvre une relation avec la terre et la nature ainsi qu’un lieu d’échange avec d’autres étudiants.
+					</div>
+				</div>
+				<!-- Resource 29: Castor Freegan -->
+				<div class="bubble smaller" id="resource29">
 					<a href="https://www.epfl.ch/campus/restaurants-shops-hotels/fr/le-castor-freegan/">
 						<img src="logo\Le_castor_logo.png" alt="Castor Freegan">
 					</a>
@@ -359,8 +379,8 @@
 						Le projet participatif “Le castor Freegan” revalorise des invendus de fruits et légumes récupérés le jour même en un dîner à prix libre au Rolex Learning Center. C’est une cafétéria autogérée par des étudiant.es pour engager la participation des étudiant.es sur des projets communs. Tu pourras venir manger le soir même mais aussi aider pour cuisiner, servir ou pour aller chercher les invendus.
 					</div>
 				</div>
-				<!-- Resource 28: Association des étudiant·es végan·es et animalistes -->
-				<div class="bubble smaller" id="resource28">
+				<!-- Resource 30: Association des étudiant·es végan·es et animalistes -->
+				<div class="bubble smaller" id="resource30">
 					<a href="https://unipoly.ch/eva/">
 						<img src="logo\EVA.png" alt="Association des étudiant·es végan·es et animalistes">
 					</a>
@@ -369,8 +389,8 @@
 						EVA est le pôle d'Unipoly représentant les étudiants véganes et animalistes. Il encourage un mode de vie éthique et respectueux des animaux, et offre la possibilité de se nourrir et de vivre aussi indépendamment que possible de l'exploitation animale en augmentant de manière significative l'offre végétalienne dans les lieux de restauration des campus universitaires. L’EVA souhaite également rassembler les étudiant·e·s véganes et personnes intéressées par le véganisme et l’animalisme au sein d’une communauté tournée vers la discussion ainsi qu’offrir support et conseils aux étudiant·e·s et collaborateur·rice·s souhaitant adopter un mode de vie végane.
 					</div>
 				</div>
-				<!-- Resource 29: Drag Lab -->
-				<div class="bubble smaller" id="resource29">
+				<!-- Resource 31: Drag Lab -->
+				<div class="bubble smaller" id="resource31">
 					<a href="https://www.epfl.ch/campus/associations/list/asar/drag-lab/">
 						<img src="logo\drag_lab.png" alt="Drag Lab">
 					</a>
@@ -379,8 +399,8 @@
 						Des étudiant, enseignant ou personnes travaillant à l'EPFL promouvant la parité et la diversité au sein de l'école d'architecture à travers des lectures et des débats.
 					</div>
 				</div>
-				<!-- Resource 30: PlanQueer -->
-				<div class="bubble smaller" id="resource30">
+				<!-- Resource 32: PlanQueer -->
+				<div class="bubble smaller" id="resource32">
 					<a href="https://www.epfl.ch/campus/associations/list/planqueer/">
 						<img src="logo\planqueer.png" alt="PlanQueer">
 					</a>
@@ -397,8 +417,8 @@
 				<img src="logo\Startup.png" alt="Image">
 				<span>Lance ton projet</span>
 				<div class="border" id="border4"></div>
-				<!-- Resource 31: EPFL Changemakers -->
-				<div class="bubble smaller" id="resource31">
+				<!-- Resource 33: EPFL Changemakers -->
+				<div class="bubble smaller" id="resource33">
 					<a href="https://www.epfl.ch/innovation/students-innovation-lab/epfl-changemakers/">
 						<img src="logo\Changemakers_Logo.png" alt="EPFL Changemakers">
 					</a>
@@ -407,8 +427,8 @@
 						Un programme de 12 semaines destiné aux étudiants prêts à se lancer dans un grand voyage d'apprentissage, à renforcer leurs compétences en matière d'innovation et d'entrepreneuriat, à réfléchir sur leur impact, et à transformer leur idée en un projet concret.
 					</div>
 				</div>
-				<!-- Resource 32: Durabilis -->
-				<div class="bubble smaller" id="resource32">
+				<!-- Resource 34: Durabilis -->
+				<div class="bubble smaller" id="resource34">
 					<a href="https://www.epfl.ch/about/sustainability/sustainability-in-education/durabilis-award/">
 						<img src="logo\durabilis.jpg" alt="Durabilis">
 					</a>
@@ -417,8 +437,8 @@
 						Le prix Durabilis, lancé en mars 2007, prime des projets d’étudiantes ou d’étudiants qui intègrent une réflexion sur la durabilité. Le concours est ouvert à tout membre du corps estudiantin en cycle Bachelor et Master de l’UNIL et de l’EPFL ayant obtenu une note supérieure à 5 pour le travail soumis, qu’il soit individuel ou en groupe. Le prix Durabilis est soutenu par la Vice-présidence pour la transformation responsable (VPT) et par la Direction de l’Université de Lausanne.
 					</div>
 				</div>
-				<!-- Resource 33: Make -->
-				<div class="bubble smaller" id="resource33">
+				<!-- Resource 35: Make -->
+				<div class="bubble smaller" id="resource35">
 					<a href="https://www.epfl.ch/education/educational-initiatives/discovery-learning-program-2/interdisciplinary-projects/">
 						<img src="logo\EPFL Make.png" alt="Make">
 					</a>
@@ -427,9 +447,9 @@
 						L’initiative MAKE permet d’intégrer interdisciplinarité, apprentissage par projet, expérimentation et prototypage au cursus des étudiantes et étudiants. L’initiative met à disposition des enseignantes et enseignants les Discovery Learning Labs (DLL). Des espaces comprenant des équipements de pointe permettant de proposer des travaux pratiques en lien direct avec la recherche ou le milieu industriel. Finalement, l’initiative fournit également aux étudiantes et étudiants (bachelor et master) un service de conseil professionnel et des espaces de prototypage pour les accompagner dans la concrétisation de leurs projets.
 					</div>
 				</div>
-				<!-- Resource 34: RebuiLT -->
-				<div class="bubble smaller" id="resource34">
-					<a href="https://make.epfl.ch/projects/rebuilt">
+				<!-- Resource 36: RebuiLT -->
+				<div class="bubble smaller" id="resource36">
+					<a href="https://rebuilt.cargo.site/">
 						<img src="logo\rebuilt.png" alt="RebuiLT">
 					</a>
 					<div class="text-description">
@@ -437,8 +457,8 @@
 						RebuiLT est le nom du projet étudiant lancé par le Low Tech Lab Lausanne en Février 2022. Il est le fruit d’une réflexion sur l’intégration de Low Techs en milieu urbain mais aussi de l’envie des étudiant.es de l’association d’intégrer la Low Tech dans leurs cursus. Il a pour but final de construire un pavillon communautaire Low Tech en matériaux de construction réemployés afin de montrer que des manières de construire soutenable écologiquement existent et qu’un avenir soutenable et désirable est possible en répondant aux besoins des habitant.es au travers de la Low Tech
 					</div>
 				</div>
-				<!-- Resource 35: Low Tech Lab -->
-				<div class="bubble smaller" id="resource35">
+				<!-- Resource 37: Low Tech Lab -->
+				<div class="bubble smaller" id="resource37">
 					<a href="https://lowtechlab.unipoly.ch/">
 						<img src="logo\low_tech_lab.png" alt="Low Tech Lab">
 					</a>
@@ -447,8 +467,8 @@
 						Et si on imaginait des technologies plus sobres et plus locales ? On pourrait décider d’utiliser des technologies plus simples, qui ne font pas plusieurs fois le tour de la planète avant d’arriver chez nous. C’est la vision de la technologie défendue par le mouvement des low-techs, ou basses technologies, par opposition aux high-techs. Ces technologies répondent à trois grands principes dans leur conception : utiles, accessibles, durables. Le Low-tech Lab Lausanne a ainsi pour but de développer la démarche low-tech au sein du campus de l’EPFL et dans la région de Lausanne, ainsi que de soutenir des projets incarnant une société techniquement soutenable et souhaitable.
 					</div>
 				</div>
-				<!-- Resource 36: Skil -->
-				<div class="bubble smaller" id="resource36">
+				<!-- Resource 38: Skil -->
+				<div class="bubble smaller" id="resource38">
 					<a href="https://www.epfl.ch/labs/skil/en/about/">
 						<img src="logo\SKIL_logo.png" alt="Skil">
 					</a>
@@ -463,8 +483,8 @@
 				<img src="logo\Sain.png" alt="Image">
 				<span>Prends soin de toi</span>
 				<div class="border" id="border5"></div>
-				<!-- Resource 37: Sports Universitaires Lausanne -->
-				<div class="bubble smaller" id="resource37">
+				<!-- Resource 39: Sports Universitaires Lausanne -->
+				<div class="bubble smaller" id="resource39">
 					<a href="https://sport.unil.ch/">
 						<img src="logo\logo-centresports.png" alt="Sports Universitaires Lausanne">
 					</a>
@@ -473,18 +493,18 @@
 						Les Sports Universitaires Lausanne (SUL) proposent des activités physiques variées et du sport aux membres de la communauté de l’Université et de l’École polytechnique fédérale de Lausanne dans le fantastique cadre du Centre sportif universitaire de Dorigny.
 					</div>
 				</div>
-				<!-- Resource 38: Espace-Transitions -->
-				<div class="bubble smaller" id="resource38">
+				<!-- Resource 40: Espace-Transitions -->
+				<div class="bubble smaller" id="resource40">
 					<a href="https://www.unil.ch/espace-transitions/fr/home.html">
 						<img src="logo\logo ET Rond.png" alt="Espace-Transitions">
 					</a>
 					<div class="text-description">
 						<h3>Espace-Transitions</h3>
-						L'espace transitions est un projet mis en place afin d'accueillir les réflexions et les ressentis sur les questions de durabilité, et, dans un second temps, de proposer un accompagnement dans l'action afin de t'aider à trouver un projet qui te convient et/ou te donner certains outils pour réaliser le tien. Pour cela, l'équipe sera présent·e·x·s pour vous accueillir autour d'un repas discussion tous les jeudis de 12h15 à 13h45, à l'Espace Transitions.
+						L'espace transitions (ET) est un projet du Centre de compétences en durabilité de l'UNIL. Il vise à soutenir le développement de compétences émotionnelles en lien aux enjeux de durabilité. Pour cela, plusieurs activités sont proposées - des conférences et des ateliers, ainsi que des moments libres de partages. L'équipe répond aussi volontiers aux besoins de la communauté du campus sur ces questions, soutient les nouveaux projets et visibilise les projets déjà existants. Le local de l'ET se situe au local 046 du bâtiment du Vortex. Les activités sont relayées sur le compte instagram @espace.transitions. Vous pouvez aussi nous contacter à espace.transitions@unil.ch. Bienvenu·e·s !
 					</div>
 				</div>
-				<!-- Resource 39: Trust and Support Network (TSN) -->
-				<div class="bubble smaller" id="resource39">
+				<!-- Resource 41: Trust and Support Network (TSN) -->
+				<div class="bubble smaller" id="resource41">
 					<a href="https://www.epfl.ch/campus/community/trust-and-support-network/">
 						<img src="logo\Trust-support-network-epfl.png" alt="Trust and Support Network (TSN)">
 					</a>
@@ -493,34 +513,14 @@
 						Le Réseau de Confiance et de Soutien de l'EPFL comprend, entre autres, le département des Affaires étudiantes, l'École doctorale, le Bureau de l'Égalité des chances, le Point Santé, la Personne de confiance et les responsables des ressources humaines. Il réunit des instances internes et externes de l'EPFL ayant pour mission de fournir une assistance initiale dans les situations de harcèlement, de discrimination et d'autres risques psychosociaux.
 					</div>
 				</div>
-				<!-- Resource 40: Guided meditation -->
-				<div class="bubble smaller" id="resource40">
+				<!-- Resource 42: Guided meditation -->
+				<div class="bubble smaller" id="resource42">
 					<a href="https://www.epfl.ch/campus/spiritual-care/activites/meditation/">
 						<img src="logo\meditation_fr.png" alt="Guided meditation">
 					</a>
 					<div class="text-description">
 						<h3>Guided meditation</h3>
 						Venez vous asseoir, loin de l’éparpillement et de l’agitation, et vous reconnecter à vous-même. Venez prendre le temps de fermer les yeux et d’apprécier le seul moment qu’il nous soit donné de vivre: l’instant présent. Les temps de méditation guidée se veulent humanistes, c’est-à-dire ouverts à toute la communauté universitaire, peu importe la tradition spirituelle des participant·e·s. Pendant 10-15′, des indications sont données (en français et en anglais) puis pendant les 15-20′ restantes, c’est le silence complet.
-					</div>
-				</div>
-				<!-- Resource 41: Apiculture -->
-				<div class="bubble smaller" id="resource41">
-					<a href="https://unipoly.ch/apiculture-english/">
-						<img src="logo\apiculture.png" alt="Apiculture">
-					</a>
-					<div class="text-description">
-						<h3>Apiculture</h3>
-						Le but du projet Apiculture est de sensibiliser les étudiants et le personnel du campus à la problématique du syndrome d’effondrement des colonies d’abeilles et de se familiariser avec l’apiculture. Pour ce faire, le projet possède son propre rucher composé d’environ 5 ruches situé sur le domaine de la ferme de Bassenges depuis début 2017 nous permettant ainsi de s’initier à l’apiculture et de produire du miel lorsque les abeilles l’ont décidé.
-					</div>
-				</div>
-				<!-- Resource 42: Jardins - Campus farmers -->
-				<div class="bubble smaller" id="resource42">
-					<a href="https://unipoly.ch/jardins-campus-farmers/">
-						<img src="logo\jardin_campus_farmers2.png" alt="Jardins - Campus farmers">
-					</a>
-					<div class="text-description">
-						<h3>Jardins - Campus farmers</h3>
-						Ce projet a pour but de permettre aux étudiants de cultiver des légumes sur leur campus de manière biologique. Bien entendu il s’agit d’un terrain d’apprentissage du jardinage, mais c’est aussi un endroit où l’on (re)découvre une relation avec la terre et la nature ainsi qu’un lieu d’échange avec d’autres étudiants.
 					</div>
 				</div>
 				<!-- Resource 43: Forêt de Dorigny -->
