--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
 						<span>Inform Yourself</span>
 					</div>
 					<div class="sub-bubble" id="subbubble2">
-						<img src="logo\Services.png" alt="Image">
-						<span>Enjoy services</span>
+						<img src="logo\Sain.png" alt="Image">
+						<span>Take Care</span>
 					</div>
 					<div class="sub-bubble" id="subbubble3">
-						<img src="logo\Community.png" alt="Image">
-						<span>Take Action</span>
+						<img src="logo\" alt="Image">
+						<span>Feed Yourself</span>
 					</div>
 				</div>
 				<div class="midcontainer" id="lower_subbubbles">
@@ -62,8 +62,12 @@
 						<span>Launch Your Project</span>
 					</div>
 					<div class="sub-bubble" id="subbubble5">
-						<img src="logo\Sain.png" alt="Image">
-						<span>Take Care</span>
+						<img src="logo\Services.png" alt="Image">
+						<span>Enjoy services</span>
+					</div>
+					<div class="sub-bubble" id="subbubble6">
+						<img src="logo\Community.png" alt="Image">
+						<span>Take Action</span>
 					</div>
 				</div>
 			</div>
@@ -165,10 +169,10 @@
 					</div>
 				</div>
 			</div>
-			<!-- Category 2: Enjoy services -->
+			<!-- Category 2: Take Care -->
 			<div class="bubble" id="bubble2">
-				<img src="logo\Services.png" alt="Image">
-				<span>Enjoy services</span>
+				<img src="logo\Sain.png" alt="Image">
+				<span>Take Care</span>
 				<div class="border" id="border2"></div>
 				<!-- Resource 9: Slow ta carrière -->
 				<div class="bubble smaller" id="resource9">
@@ -291,10 +295,10 @@
 					</div>
 				</div>
 			</div>
-			<!-- Category 3: Take Action -->
+			<!-- Category 3: Feed Yourself -->
 			<div class="bubble" id="bubble3">
-				<img src="logo\Community.png" alt="Image">
-				<span>Take Action</span>
+				<img src="logo\" alt="Image">
+				<span>Feed Yourself</span>
 				<div class="border" id="border3"></div>
 				<!-- Resource 21: Unipoly -->
 				<div class="bubble smaller" id="resource21">
@@ -505,10 +509,10 @@
 					</div>
 				</div>
 			</div>
-			<!-- Category 5: Take Care -->
+			<!-- Category 5: Enjoy services -->
 			<div class="bubble" id="bubble5">
-				<img src="logo\Sain.png" alt="Image">
-				<span>Take Care</span>
+				<img src="logo\Services.png" alt="Image">
+				<span>Enjoy services</span>
 				<div class="border" id="border5"></div>
 				<!-- Resource 41: Sports Universitaires Lausanne -->
 				<div class="bubble smaller" id="resource41">
@@ -540,8 +544,18 @@
 						L'espace transitions (ET) is a project of the UNIL Sustainability Center of Competence. It aims to support the development of emotional skills related to sustainability issues. For this, several activities are offered - conferences and workshops, as well as free moments of sharing. The team also responds to the needs of the campus community on these issues, supports new projects and raises the profile of existing projects. The ET is located in room 046 of the Vortex building. The activities are relayed on the Instagram account @espace.transitions. You can also contact us at espace.transitions@unil.ch. Welcome!
 					</div>
 				</div>
-				<!-- Resource 44: Guided meditation -->
+				<!-- Resource 44: Mindfulness -->
 				<div class="bubble smaller" id="resource44">
+					<a href="https://www.epfl.ch/campus/security-safety/en/health/mental-health-well-being/well-being/mindfulness/">
+						<img src="logo\" alt="Mindfulness">
+					</a>
+					<div class="text-description">
+						<h3>Mindfulness</h3>
+						Free of charge from October to end of June every Tuesdays either in presence in room CO 011 or online. Either from 12h30 to 13h or 13h to 13h30. 2024: practices according to the four pillar of mental health designed by Prof. Richard Davidson: awareness, connexion, insight, meaning and values. Opening an account is required before registering into the sessions.
+					</div>
+				</div>
+				<!-- Resource 45: Guided meditation -->
+				<div class="bubble smaller" id="resource45">
 					<a href="https://www.epfl.ch/campus/spiritual-care/activites/meditation/">
 						<img src="logo\meditation.png" alt="Guided meditation">
 					</a>
@@ -550,8 +564,8 @@
 						Come and sit down, away from what scatters and hustle you, and reconnect with yourself. Come and take the time to close your eyes and appreciate the only moment we have the opportunity to live: the present one. The guided meditation times are intended to be humanistic, that is, open to the entire university community, regardless of the spiritual tradition of the participant. During 10-15′, indications are given (in French and English) then during the remaining 15-20′, it is complete silence.
 					</div>
 				</div>
-				<!-- Resource 45: Forêt de Dorigny -->
-				<div class="bubble smaller" id="resource45">
+				<!-- Resource 46: Forêt de Dorigny -->
+				<div class="bubble smaller" id="resource46">
 					<a href="https://www.google.com/maps/place/For%C3%AAt+de+Dorigny/@46.5233077,6.578139,15z/data=!4m2!3m1!1s0x0:0x72d0e6ee0ae1dd4c?sa=X&ved=2ahUKEwiqx5nplcL-AhVPhf0HHTw7AHwQ_BJ6BAhVEAg">
 						<img src="logo\forest.png" alt="Forêt de Dorigny">
 					</a>
