--- a/index_fr.html
+++ b/index_fr.html
@@ -41,12 +41,12 @@
 						<span>Informe toi</span>
 					</div>
 					<div class="sub-bubble" id="subbubble2">
-						<img src="logo\Services.png" alt="Image">
-						<span>Profite des services</span>
+						<img src="logo\Sain.png" alt="Image">
+						<span>Prends soin de toi</span>
 					</div>
 					<div class="sub-bubble" id="subbubble3">
-						<img src="logo\Community.png" alt="Image">
-						<span>Engage toi</span>
+						<img src="logo\" alt="Image">
+						<span>Nourris toi</span>
 					</div>
 				</div>
 				<div class="midcontainer" id="lower_subbubbles">
@@ -55,8 +55,12 @@
 						<span>Lance ton projet</span>
 					</div>
 					<div class="sub-bubble" id="subbubble5">
-						<img src="logo\Sain.png" alt="Image">
-						<span>Prends soin de toi</span>
+						<img src="logo\Services.png" alt="Image">
+						<span>Profite des services</span>
+					</div>
+					<div class="sub-bubble" id="subbubble6">
+						<img src="logo\Community.png" alt="Image">
+						<span>Engage toi</span>
 					</div>
 				</div>
 			</div>
@@ -158,10 +162,10 @@
 					</div>
 				</div>
 			</div>
-			<!-- Category 2: Profite des services -->
+			<!-- Category 2: Prends soin de toi -->
 			<div class="bubble" id="bubble2">
-				<img src="logo\Services.png" alt="Image">
-				<span>Profite des services</span>
+				<img src="logo\Sain.png" alt="Image">
+				<span>Prends soin de toi</span>
 				<div class="border" id="border2"></div>
 				<!-- Resource 9: Slow ta carrière -->
 				<div class="bubble smaller" id="resource9">
@@ -284,10 +288,10 @@
 					</div>
 				</div>
 			</div>
-			<!-- Category 3: Engage toi -->
+			<!-- Category 3: Nourris toi -->
 			<div class="bubble" id="bubble3">
-				<img src="logo\Community.png" alt="Image">
-				<span>Engage toi</span>
+				<img src="logo\" alt="Image">
+				<span>Nourris toi</span>
 				<div class="border" id="border3"></div>
 				<!-- Resource 21: Unipoly -->
 				<div class="bubble smaller" id="resource21">
@@ -498,10 +502,10 @@
 					</div>
 				</div>
 			</div>
-			<!-- Category 5: Prends soin de toi -->
+			<!-- Category 5: Profite des services -->
 			<div class="bubble" id="bubble5">
-				<img src="logo\Sain.png" alt="Image">
-				<span>Prends soin de toi</span>
+				<img src="logo\Services.png" alt="Image">
+				<span>Profite des services</span>
 				<div class="border" id="border5"></div>
 				<!-- Resource 41: Sports Universitaires Lausanne -->
 				<div class="bubble smaller" id="resource41">
@@ -533,8 +537,18 @@
 						Le Réseau de Confiance et de Soutien de l'EPFL comprend, entre autres, le département des Affaires étudiantes, l'École doctorale, le Bureau de l'Égalité des chances, le Point Santé, la Personne de confiance et les responsables des ressources humaines. Il réunit des instances internes et externes de l'EPFL ayant pour mission de fournir une assistance initiale dans les situations de harcèlement, de discrimination et d'autres risques psychosociaux.
 					</div>
 				</div>
-				<!-- Resource 44: Guided meditation -->
+				<!-- Resource 44: Mindfulness -->
 				<div class="bubble smaller" id="resource44">
+					<a href="https://www.epfl.ch/campus/security-safety/en/health/mental-health-well-being/well-being/mindfulness/">
+						<img src="logo\" alt="Mindfulness">
+					</a>
+					<div class="text-description">
+						<h3>Mindfulness</h3>
+						
+					</div>
+				</div>
+				<!-- Resource 45: Guided meditation -->
+				<div class="bubble smaller" id="resource45">
 					<a href="https://www.epfl.ch/campus/spiritual-care/activites/meditation/">
 						<img src="logo\meditation_fr.png" alt="Guided meditation">
 					</a>
@@ -543,8 +557,8 @@
 						Venez vous asseoir, loin de l’éparpillement et de l’agitation, et vous reconnecter à vous-même. Venez prendre le temps de fermer les yeux et d’apprécier le seul moment qu’il nous soit donné de vivre: l’instant présent. Les temps de méditation guidée se veulent humanistes, c’est-à-dire ouverts à toute la communauté universitaire, peu importe la tradition spirituelle des participant·e·s. Pendant 10-15′, des indications sont données (en français et en anglais) puis pendant les 15-20′ restantes, c’est le silence complet.
 					</div>
 				</div>
-				<!-- Resource 45: Forêt de Dorigny -->
-				<div class="bubble smaller" id="resource45">
+				<!-- Resource 46: Forêt de Dorigny -->
+				<div class="bubble smaller" id="resource46">
 					<a href="https://www.google.com/maps/place/For%C3%AAt+de+Dorigny/@46.5233077,6.578139,15z/data=!4m2!3m1!1s0x0:0x72d0e6ee0ae1dd4c?sa=X&ved=2ahUKEwiqx5nplcL-AhVPhf0HHTw7AHwQ_BJ6BAhVEAg">
 						<img src="logo\forest.png" alt="Forêt de Dorigny">
 					</a>
