--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 				<!-- Resource 12: Mindfulness -->
 				<div class="bubble smaller" id="resource12">
 					<a href="https://www.epfl.ch/campus/security-safety/en/health/mental-health-well-being/well-being/mindfulness/">
-						<img src="logo\" alt="Mindfulness">
+						<img src="logo\mindfulness.png" alt="Mindfulness">
 					</a>
 					<div class="text-description">
 						<h3>Mindfulness</h3>
